objects/Quote.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__RatingType__c</fullName>
        <label>Rating Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <description>Name of Quote Record Type</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RenewalSourceContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Source Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RootItemTotal__c</fullName>
        <formula>vlocity_ins__PrimaryRootItemId__r.UnitPrice + vlocity_ins__TotalAdjustmentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceAssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset from which Quote is created.</description>
        <label>Source Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StandardPremium__c</fullName>
        <label>Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TermsofEligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms of Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAdjustmentAmount__c</fullName>
        <description>Manual price adjustments on total price.</description>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmountTermDifference__c</fullName>
        <description>Difference between current and original amount for term.</description>
        <formula>(vlocity_ins__TotalPremiumforTerm__c + vlocity_ins__TotalFeeForTerm__c + vlocity_ins__TotalTaxForTerm__c) - (vlocity_ins__OriginalPremiumForTerm__c + vlocity_ins__OriginalFeeForTerm__c + vlocity_ins__OriginalTaxForTerm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount for Term Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmount__c</fullName>
        <description>Total taxes, fees, and price for the Quote.</description>
        <formula>vlocity_ins__TotalTaxAmount__c + vlocity_ins__TotalFeeAmount__c + vlocity_ins__RootItemTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalFeeAmount__c</fullName>
        <description>Total amount of itemized fees for Quote.</description>
        <label>Total Fee Amount</label>
        <summarizedField>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__QuoteId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalFeeForTerm__c</fullName>
        <description>The total amount of fee that will be collected for this quote over the full term.</description>
        <label>Total Fee for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalFeeTermDifference__c</fullName>
        <description>Difference between current and original fee for term.</description>
        <formula>vlocity_ins__TotalFeeForTerm__c - vlocity_ins__OriginalFeeForTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee for Term Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPremiumTermDifference__c</fullName>
        <description>Difference between current and original premium for term.</description>
        <formula>vlocity_ins__TotalPremiumforTerm__c - vlocity_ins__OriginalPremiumForTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Premium for Term Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPremiumforTerm__c</fullName>
        <description>The total amount of premium that will be collected for this quote over the full term.</description>
        <label>Total Premium for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalSumInsured__c</fullName>
        <formula>vlocity_ins__PrimaryRootItemId__r.vlocity_ins__TotalSumInsured__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sum Insured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalTaxAmount__c</fullName>
        <description>Total amount of itemized taxes for Quote.</description>
        <label>Total Tax Amount</label>
        <summarizedField>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__QuoteId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalTaxForTerm__c</fullName>
        <description>The total amount of tax that will be collected for this quote over the full term.</description>
        <label>Total Tax for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalTaxTermDifference__c</fullName>
        <description>Difference between current and original tax for term.</description>
        <formula>vlocity_ins__TotalTaxForTerm__c - vlocity_ins__OriginalTaxForTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax for Term Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                    <default>true</default>
                    <label>New Business</label>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnderwriterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_CA_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>California</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All CA Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_CO_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Colorado</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All CO Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_CT_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Connecticut</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All CT Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_GA_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Georgia</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All GA Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_IN_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Indiana</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All IN Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_KY_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Kentucky</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All KY Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_Local_Large_Group_CDHP_Questionnaire</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>GroupNumber__c</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>All Local/LargeGroup CDHP Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_ME_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Maine</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All ME Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_MO_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Missouri</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All MO Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_NH_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>New Hampshire</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All NH Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_NV_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Nevada</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All NV Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_NY_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>New York</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All NY Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_National_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All National Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_OH_Questionnaires</fullName>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Ohio</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All OH Questionnaires</label>
    </listViews>
    <listViews>
        <fullName>All_Questionnaires_with_ISG_Integration</fullName>
        <booleanFilter>(1 OR 4)  AND 2 AND 3 AND 5 AND 6</booleanFilter>
        <columns>CDHP_Questionnaire_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Employer_ID_Case_Number__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Opportunity_Effective_Date__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.NAME</columns>
        <columns>CDHP_Questionnaire_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Status__c</field>
            <operation>equals</operation>
            <value>Integration Error</value>
        </filters>
        <filters>
            <field>CDHP_SF_Id_From_ISG__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>CDHP_Questionnaire_Name__c</field>
            <operation>contains</operation>
            <value>CDHP</value>
        </filters>
        <filters>
            <field>Opportunity_Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All Questionnaires with  INTEG Errors</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_ins__LargeGroupQuote</fullName>
        <active>true</active>
        <label>Large Group Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Quote</fullName>
        <active>true</active>
        <label>Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__SmallGroupQuote</fullName>
        <active>true</active>
        <label>Small Group Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ANA_VR_Q01_RestrictUserFromDeletingQLI</fullName>
        <active>false</active>
        <description>This rule restricts unauthorized users from deleting QLIs.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c, PRIORVALUE( LineItemCount ) &gt;  LineItemCount , NOT( $User.AllowQLIDelete__c ) )</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>You don&apos;t have permission to delete.</errorMessage>
    </validationRules>
</CustomObject>